// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Menu Menu is large 1`] = `
<div>
  <div
    class="main-wrapper"
  >
    <button
      aria-controls="dropdown-"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="true"
      class="button button-default button-medium pill-shape"
      id="dropdown-reference"
      role="button"
      tabindex="0"
    >
      <span
        class="button-text-medium"
      >
        Menu dropdown
      </span>
    </button>
    <div
      class="dropdown-wrapper no-padding open"
      id="dropdown-"
      role="listbox"
      style="position: absolute; top: 4px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="my-menu-class menu-container large"
        style="color: red;"
      >
        <ul
          class="list-container vertical"
          role="menu"
        >
          <li
            class="menu-item large neutral my-menu-item-class"
            role="presentation"
          >
            <button
              class="menu-item-button"
              id="listItem0-"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span
                class="icon-wrapper"
                role="presentation"
              >
                <svg
                  role="presentation"
                  style="width: 24px; height: 24px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
              <span
                class="menu-item-wrapper"
              >
                <span
                  class="item-text"
                >
                  <span
                    class="label"
                  >
                    Date
                  </span>
                  <span>
                    8
                  </span>
                </span>
              </span>
            </button>
          </li>
          <li
            class="menu-item large neutral disabled my-menu-item-class"
            role="presentation"
          >
            <button
              class="menu-item-button"
              disabled=""
              id="listItem1-"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span
                class="menu-item-wrapper"
              >
                <span
                  class="item-text"
                >
                  <span
                    class="label"
                  >
                    Disabled button
                  </span>
                </span>
              </span>
            </button>
          </li>
          <li
            class="menu-item-sub-header large my-menu-item-class"
            role="presentation"
          >
            <span
              data-disabled="true"
              id="listItem2-"
              tabindex="-1"
              variant="neutral"
            >
              Sub header
            </span>
          </li>
          <li
            class="menu-item large neutral my-menu-item-class"
            role="presentation"
          >
            <a
              aria-disabled="false"
              class="link-style full-width menu-link"
              href="https://x.com"
              id="listItem3-"
              role="menuitem"
              tabindex="0"
              target="_blank"
            >
              <span
                class="menu-item-wrapper"
              >
                <span
                  class="item-text"
                >
                  <span
                    class="label"
                  >
                    X link
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="menu-item-custom large my-menu-item-class"
            role="presentation"
          >
            <div
              aria-label="Radio Group"
              class="radio-group vertical radio-group-large"
              role="radiogroup"
            >
              <div
                class="selector selector-large"
              >
                <input
                  aria-disabled="false"
                  checked=""
                  id="oea2exk-1"
                  name="group"
                  readonly=""
                  type="radio"
                  value="Radio1"
                />
                <label
                  class=""
                  for="oea2exk-1"
                >
                  <span
                    class="radio-button"
                    id="oea2exk-1-custom-radio"
                  />
                  <span
                    class="selector-label selector-label-end"
                  >
                    Radio1
                  </span>
                </label>
              </div>
              <div
                class="selector selector-large"
              >
                <input
                  aria-disabled="false"
                  id="oea2exk-2"
                  name="group"
                  readonly=""
                  type="radio"
                  value="Radio2"
                />
                <label
                  class=""
                  for="oea2exk-2"
                >
                  <span
                    class="radio-button"
                    id="oea2exk-2-custom-radio"
                  />
                  <span
                    class="selector-label selector-label-end"
                  >
                    Radio2
                  </span>
                </label>
              </div>
              <div
                class="selector selector-large"
              >
                <input
                  aria-disabled="false"
                  id="oea2exk-3"
                  name="group"
                  readonly=""
                  type="radio"
                  value="Radio3"
                />
                <label
                  class=""
                  for="oea2exk-3"
                >
                  <span
                    class="radio-button"
                    id="oea2exk-3-custom-radio"
                  />
                  <span
                    class="selector-label selector-label-end"
                  >
                    Radio3
                  </span>
                </label>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu Menu is medium 1`] = `
<div>
  <div
    class="main-wrapper"
  >
    <button
      aria-controls="dropdown-"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="true"
      class="button button-default button-medium pill-shape"
      id="dropdown-reference"
      role="button"
      tabindex="0"
    >
      <span
        class="button-text-medium"
      >
        Menu dropdown
      </span>
    </button>
    <div
      class="dropdown-wrapper no-padding open"
      id="dropdown-"
      role="listbox"
      style="position: absolute; top: 4px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="my-menu-class menu-container medium"
        style="color: red;"
      >
        <ul
          class="list-container vertical"
          role="menu"
        >
          <li
            class="menu-item medium neutral my-menu-item-class"
            role="presentation"
          >
            <button
              class="menu-item-button"
              id="listItem0-"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span
                class="icon-wrapper"
                role="presentation"
              >
                <svg
                  role="presentation"
                  style="width: 20px; height: 20px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
              <span
                class="menu-item-wrapper"
              >
                <span
                  class="item-text"
                >
                  <span
                    class="label"
                  >
                    Date
                  </span>
                  <span>
                    8
                  </span>
                </span>
              </span>
            </button>
          </li>
          <li
            class="menu-item medium neutral disabled my-menu-item-class"
            role="presentation"
          >
            <button
              class="menu-item-button"
              disabled=""
              id="listItem1-"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span
                class="menu-item-wrapper"
              >
                <span
                  class="item-text"
                >
                  <span
                    class="label"
                  >
                    Disabled button
                  </span>
                </span>
              </span>
            </button>
          </li>
          <li
            class="menu-item-sub-header medium my-menu-item-class"
            role="presentation"
          >
            <span
              data-disabled="true"
              id="listItem2-"
              tabindex="-1"
              variant="neutral"
            >
              Sub header
            </span>
          </li>
          <li
            class="menu-item medium neutral my-menu-item-class"
            role="presentation"
          >
            <a
              aria-disabled="false"
              class="link-style full-width menu-link"
              href="https://x.com"
              id="listItem3-"
              role="menuitem"
              tabindex="0"
              target="_blank"
            >
              <span
                class="menu-item-wrapper"
              >
                <span
                  class="item-text"
                >
                  <span
                    class="label"
                  >
                    X link
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="menu-item-custom medium my-menu-item-class"
            role="presentation"
          >
            <div
              aria-label="Radio Group"
              class="radio-group vertical radio-group-medium"
              role="radiogroup"
            >
              <div
                class="selector selector-medium"
              >
                <input
                  aria-disabled="false"
                  checked=""
                  id="oea2exk-1"
                  name="group"
                  readonly=""
                  type="radio"
                  value="Radio1"
                />
                <label
                  class=""
                  for="oea2exk-1"
                >
                  <span
                    class="radio-button"
                    id="oea2exk-1-custom-radio"
                  />
                  <span
                    class="selector-label selector-label-end"
                  >
                    Radio1
                  </span>
                </label>
              </div>
              <div
                class="selector selector-medium"
              >
                <input
                  aria-disabled="false"
                  id="oea2exk-2"
                  name="group"
                  readonly=""
                  type="radio"
                  value="Radio2"
                />
                <label
                  class=""
                  for="oea2exk-2"
                >
                  <span
                    class="radio-button"
                    id="oea2exk-2-custom-radio"
                  />
                  <span
                    class="selector-label selector-label-end"
                  >
                    Radio2
                  </span>
                </label>
              </div>
              <div
                class="selector selector-medium"
              >
                <input
                  aria-disabled="false"
                  id="oea2exk-3"
                  name="group"
                  readonly=""
                  type="radio"
                  value="Radio3"
                />
                <label
                  class=""
                  for="oea2exk-3"
                >
                  <span
                    class="radio-button"
                    id="oea2exk-3-custom-radio"
                  />
                  <span
                    class="selector-label selector-label-end"
                  >
                    Radio3
                  </span>
                </label>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu Menu is small 1`] = `
<div>
  <div
    class="main-wrapper"
  >
    <button
      aria-controls="dropdown-"
      aria-disabled="false"
      aria-expanded="true"
      aria-haspopup="true"
      class="button button-default button-medium pill-shape"
      id="dropdown-reference"
      role="button"
      tabindex="0"
    >
      <span
        class="button-text-medium"
      >
        Menu dropdown
      </span>
    </button>
    <div
      class="dropdown-wrapper no-padding open"
      id="dropdown-"
      role="listbox"
      style="position: absolute; top: 4px; left: 0px;"
      tabindex="-1"
    >
      <div
        class="my-menu-class menu-container small"
        style="color: red;"
      >
        <ul
          class="list-container vertical"
          role="menu"
        >
          <li
            class="menu-item small neutral my-menu-item-class"
            role="presentation"
          >
            <button
              class="menu-item-button"
              id="listItem0-"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span
                class="icon-wrapper"
                role="presentation"
              >
                <svg
                  role="presentation"
                  style="width: 16px; height: 16px;"
                  viewBox="0 0 24 24"
                >
                  <path
                    d="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
                    style="fill: currentColor;"
                  />
                </svg>
              </span>
              <span
                class="menu-item-wrapper"
              >
                <span
                  class="item-text"
                >
                  <span
                    class="label"
                  >
                    Date
                  </span>
                  <span>
                    8
                  </span>
                </span>
              </span>
            </button>
          </li>
          <li
            class="menu-item small neutral disabled my-menu-item-class"
            role="presentation"
          >
            <button
              class="menu-item-button"
              disabled=""
              id="listItem1-"
              role="menuitem"
              tabindex="0"
              type="button"
            >
              <span
                class="menu-item-wrapper"
              >
                <span
                  class="item-text"
                >
                  <span
                    class="label"
                  >
                    Disabled button
                  </span>
                </span>
              </span>
            </button>
          </li>
          <li
            class="menu-item-sub-header small my-menu-item-class"
            role="presentation"
          >
            <span
              data-disabled="true"
              id="listItem2-"
              tabindex="-1"
              variant="neutral"
            >
              Sub header
            </span>
          </li>
          <li
            class="menu-item small neutral my-menu-item-class"
            role="presentation"
          >
            <a
              aria-disabled="false"
              class="link-style full-width menu-link"
              href="https://x.com"
              id="listItem3-"
              role="menuitem"
              tabindex="0"
              target="_blank"
            >
              <span
                class="menu-item-wrapper"
              >
                <span
                  class="item-text"
                >
                  <span
                    class="label"
                  >
                    X link
                  </span>
                </span>
              </span>
            </a>
          </li>
          <li
            class="menu-item-custom small my-menu-item-class"
            role="presentation"
          >
            <div
              aria-label="Radio Group"
              class="radio-group vertical radio-group-small"
              role="radiogroup"
            >
              <div
                class="selector selector-small"
              >
                <input
                  aria-disabled="false"
                  checked=""
                  id="oea2exk-1"
                  name="group"
                  readonly=""
                  type="radio"
                  value="Radio1"
                />
                <label
                  class=""
                  for="oea2exk-1"
                >
                  <span
                    class="radio-button"
                    id="oea2exk-1-custom-radio"
                  />
                  <span
                    class="selector-label selector-label-end"
                  >
                    Radio1
                  </span>
                </label>
              </div>
              <div
                class="selector selector-small"
              >
                <input
                  aria-disabled="false"
                  id="oea2exk-2"
                  name="group"
                  readonly=""
                  type="radio"
                  value="Radio2"
                />
                <label
                  class=""
                  for="oea2exk-2"
                >
                  <span
                    class="radio-button"
                    id="oea2exk-2-custom-radio"
                  />
                  <span
                    class="selector-label selector-label-end"
                  >
                    Radio2
                  </span>
                </label>
              </div>
              <div
                class="selector selector-small"
              >
                <input
                  aria-disabled="false"
                  id="oea2exk-3"
                  name="group"
                  readonly=""
                  type="radio"
                  value="Radio3"
                />
                <label
                  class=""
                  for="oea2exk-3"
                >
                  <span
                    class="radio-button"
                    id="oea2exk-3-custom-radio"
                  />
                  <span
                    class="selector-label selector-label-end"
                  >
                    Radio3
                  </span>
                </label>
              </div>
            </div>
          </li>
        </ul>
      </div>
    </div>
  </div>
</div>
`;

exports[`Menu Should render a menu button 1`] = `
<div>
  <div
    class="main-wrapper"
  >
    <button
      aria-controls="dropdown-"
      aria-disabled="false"
      aria-expanded="false"
      aria-haspopup="true"
      class="button button-default button-medium pill-shape"
      id="dropdown-reference"
      role="button"
      tabindex="0"
    >
      <span
        class="button-text-medium"
      >
        Menu dropdown
      </span>
    </button>
  </div>
</div>
`;
